--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>GPX Tagger</title>
 <style>
 #container {position:relative}
-#stats1 {font-size: 15px;position:absolute;top:0;right:0;background:lightgray;width:180px;height:100px;}
-#stats2 {font-size: 15px;position:absolute;top:0;right:200;background:lightgray;width:180px;height:100px;}
+#stats1 {color: white; font-size: 15px;position:absolute;top:3;left:3;background:#0390fc70;width:180px;height:100px;}
+#stats2 {color:white; font-size: 15px;position:absolute;top:3;right:3;background:#0390fc70;width:180px;height:100px;}
 #mapdiv {position:absolute;bottom:0;left:0;}
 </style>
 <script>
