--- a/index.html
+++ b/index.html
@@ -313,13 +313,27 @@ const canvas = document.getElementById("mapcanvas");
 const rec = document.getElementById("rec");
 const ctx = canvas.getContext("2d");
 const img = document.getElementById("map");
-canvas.width = rec.clientWidth*.2;
-canvas.height = rec.clientHeight*.2;
+canvas.width = rec.clientWidth * .2;
+canvas.height = rec.clientHeight * .2;
 
 var ratio = img.width/img.height
 var offset = canvas.getBoundingClientRect().width/img.width;
+
+if (img.width < img.height) {
+  canvas.width = rec.clientHeight * .2;
+  canvas.height = rec.clientWidth * .2;
+  ratio = img.height/img.width
+  offset = canvas.getBoundingClientRect().height/img.height;
+  canvas.width = Math.round(img.width*offset)
+}
+
 ctx.clearRect(0, 0, canvas.width, canvas.height);
-ctx.drawImage(img,0,0, img.naturalWidth, img.naturalHeight,0,0,Math.round(img.width*offset),Math.round(img.width*offset/ratio));
+
+if (img.width < img.height) {
+  ctx.drawImage(img,0,0, img.naturalWidth, img.naturalHeight,0,0,Math.round(img.height*offset/ratio),Math.round(img.height*offset));
+} else{
+  ctx.drawImage(img,0,0, img.naturalWidth, img.naturalHeight,0,0,Math.round(img.width*offset),Math.round(img.width*offset/ratio));
+}
 
 drawPath();
 drawHistory();
