--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
      crossorigin=""/>
 <style>
 #container {position:relative}
-#stats1 {color: white; font-size: 15px;position:absolute;top:3;left:3;background:#0390fc70;width:180px;height:100px;}
-#stats2 {color:white; font-size: 15px;position:absolute;top:3;right:3;background:#0390fc70;width:180px;height:100px;}
+#stats1 {color: white; font-size: 15px;position:absolute;bottom:50;right:190;background:#0390fc70;width:180px;height:100px;}
+#stats2 {color:white; font-size: 15px;position:absolute;bottom:50;right:3;background:#0390fc70;width:180px;height:100px;}
 #mapdiv {position:absolute;bottom:50;left:0;}
 #elediv {position:absolute;bottom:0;left:0;background:#0390fc70;}
 #osmap {z-index:0;width:25%;height:180px;position:absolute;bottom:50;left:0;}
