--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 #container {position:relative}
 #stats1 {color: white; font-size: 15px;position:absolute;bottom:50;right:190;background:#0390fc70;width:180px;height:100px;}
-#stats2 {color:white; font-size: 15px;position:absolute;bottom:50;right:3;background:#0390fc70;width:180px;height:100px;}
+#stats2 {color:white; font-size: 15px;position:absolute;bottom:50;right:0;background:#0390fc70;width:180px;height:100px;}
 #mapdiv {position:absolute;bottom:50;left:0;}
 #elediv {position:absolute;bottom:0;left:0;background:#0390fc70;}
 #osmap {z-index:0;width:25%;height:180px;position:absolute;bottom:50;left:0;}
@@ -300,14 +300,14 @@ var hist = []
 function initEle() {
 const canvas = document.getElementById("elevationcanvas");
 const rec = document.getElementById("rec");
-canvas.width = rec.clientWidth;
+canvas.width = rec.clientWidth-2;
 }
 
 function drawEle() {
 const canvas = document.getElementById("elevationcanvas");
 const rec = document.getElementById("rec");
 const ctx = canvas.getContext("2d");
-canvas.width = rec.clientWidth;
+canvas.width = rec.clientWidth-2;
 
 for (let e = 0; e < stats.length; e++) {
   let el = stats[e]["elevation"] 
